--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chandrakant Ambade | Java Full Stack Developer</title>
+    <title>Chandrakant Bambarde | Java Full Stack Developer</title>
       <link rel="stylesheet" href="style.css">
 
 </head>
@@ -272,3 +272,4 @@
      <script src="script.js"></script>
 </body>
 </html>
+
