--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                 <div class="hero-buttons">
                     <a href="#" class="btn btn-primary">📄 Download Resume</a>
                     <a href="https://github.com/chandrakantbambarde" target="_blank" class="btn btn-outline">💻 GitHub</a>
-                    <a href="https://linkedin.com/chandrakantbambarde" target="_blank" class="btn btn-outline">🔗 LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/chandrakantbambarde/" target="_blank" class="btn btn-outline">🔗 LinkedIn</a>
                 </div>
             </div>
            <div class="hero-image">
     <div class="hero-illustration">
-        <img src="photo.jpeg" alt="Chandrakant" class="hero-photo">
+        <img src="images/photo.jpeg" alt="Chandrakant" class="hero-photo">
     </div>
 </div>
 
@@ -272,4 +272,3 @@
      <script src="script.js"></script>
 </body>
 </html>
-
