--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
     </section>
 
     <!-- About Section -->
-   <section id="about">
-    <div class="container">
-        <h2 class="section-title">About Me</h2>
+    <section id="about">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
 
-        <div class="about-box">
-            <p>
-                Computer Science graduate with a strong foundation in Java Full Stack Development, specializing in
-                building robust backend systems using Spring Boot and REST APIs. Experienced in designing and
-                managing MySQL databases with a solid grasp of OOP principles. Skilled in writing clean, efficient,
-                and maintainable code, with hands-on internship experience in backend development. Actively seeking
-                entry-level Full Stack or Backend Developer roles to contribute to scalable applications and grow as
-                a professional software developer.
-            </p>
+            <div class="about-box">
+                <p>
+                    Computer Science graduate with a strong foundation in Java Full Stack Development, specializing in
+                    building robust backend systems using Spring Boot and REST APIs. Experienced in designing and
+                    managing MySQL databases with a solid grasp of OOP principles. Skilled in writing clean, efficient,
+                    and maintainable code, with hands-on internship experience in backend development. Actively seeking
+                    entry-level Full Stack or Backend Developer roles to contribute to scalable applications and grow as
+                    a professional software developer.
+                </p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
     <!-- Skills Section -->
@@ -143,6 +143,25 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-header">
+                        <h3>Hospital Management System</h3>
+                        <p class="project-tech">Spring Boot | REST API | MySQL | HTML | CSS | JS</p>
+                    </div>
+                    <div class="project-body">
+                        <ul>
+                            <li>Developed backend REST APIs for patient, doctor, and appointment management</li>
+                            <li>Designed MySQL database schema for patients, doctors, appointments, and billing</li>
+                            <li>Implemented CRUD operations using Spring Boot and Spring Data JPA</li>
+                            <li>Applied layered architecture for clean and maintainable code</li>
+                        </ul>
+                        <div class="project-links">
+                            <a href="https://github.com/chandrakantbambarde/YOUR_HMS_REPO">🔗 GitHub</a>
+                            <a href="https://hospital-chandu.onrender.com/">🌐 Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
                         <h3>Logistics Delivery Management System</h3>
                         <p class="project-tech">Spring Boot | REST API | MySQL | HTML | CSS | JS</p>
                     </div>
@@ -176,22 +195,7 @@
                     </div>
                 </div>
 
-                <div class="project-card">
-                    <div class="project-header">
-                        <h3>Hotel Management System</h3>
-                        <p class="project-tech">Core Java | Collections | Serialization</p>
-                    </div>
-                    <div class="project-body">
-                        <ul>
-                            <li>Built console-based booking and billing system</li>
-                            <li>Implemented using Java Collections framework</li>
-                            <li>Added data persistence using serialization</li>
-                        </ul>
-                        <div class="project-links">
-                            <a href="#">🔗 GitHub</a>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
